--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <section id="presentation">
         <h2>Présentation</h2>
-        <p>Je suis actuellement en BTS SIO (Services Informatiques aux Organisations), spécialisé en développement.</p>
-        <p>Mon parcours scolaire et professionnel inclut des stages et des projets significatifs dans le domaine de l'informatique.</p>
+        <p> Débutant en programmation.</p>
     </section>
 
     <section id="bts-sio">
@@ -41,7 +40,7 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:ismaelallain1@gmail.com">ismaelallain1@gmail.com</a></p>
+    <p>Email: <a href="mailto:ismail.allain@sfr.fr">ismaelallain1@gmail.com</a></p>
     <p>GitHub: <a href="github.com/Smaa4" target="_blank">github.com/Smaa4</a></p>
 </section>
 
